--- a/AdminPanel/src/index.html
+++ b/AdminPanel/src/index.html
@@ -17,5 +17,6 @@
 
 <body class="g-sidenav-show rtl bg-gray-200">
   <app-root></app-root>
+  <script src="assets/js/material-dashboard.js"></script>
 </body>
 </html>
